--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5639386526919010"
-    crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="assets/companylogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TecxZo - Building the Future</title>
+
+    <!-- Google Analytics (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LLG41VRK1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-8LLG41VRK1");
+    </script>
   </head>
   <body>
     <div id="root"></div>
